--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ chrono = "0.4"
 futures = "0.3"
 thiserror = "2.0.3"
 anyhow = "1.0"
+rusqlite = { version = "0.32.1", features = ["bundled"] }
+bcrypt = "0.16.0"
