--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.5"
+rocket = { version = "0.5", features = ["secrets"] }
 rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -18,3 +18,4 @@ thiserror = "2.0.3"
 anyhow = "1.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
 bcrypt = "0.16.0"
+uuid = { version = "1.11.0", features = ["v4"] }
